Fixes spacing problem in login form (#1517)

--- a/frontend/app/styles/partials/login.scss
+++ b/frontend/app/styles/partials/login.scss
@@ -38,7 +38,7 @@ $colorwhite: #ffffff;
 }
 
 .oauth-methods {
-  margin-top: 55px;
+  margin-top: 60px;
 }
 
 .form {
